# ts_ticket_review_and_update

./: .dockerignore  .gitignore  DOMAIN_MODEL.md  Matcha_API_Documentation.md  README.md  SOLUTION.md  _check_yaml.py  _review_results.py  action_classifier.py  activity_cleaner.py  analytics_queries.py  available_models.txt  azdevops_client.py  build_cluster_catalog.py  config.py  db.py  dump_complex_ticket.py  export_1000_no_rc.py  get_models.py  glossary.py  how_to_host.md  matcha.py  matcha_client.py  moo_pipeline_input.csv  pass1_parser.py  pass2_parser.py  pass3_parser.py  pipeline_input_100.csv  pipeline_input_1k.csv  pipeline_input_500.csv  pipeline_input_pm_impresa_1k.csv  pipeline_stages.py  prompt_store.py  pyproject.toml  qma_more  requirements.txt  run_all.py  run_analytics.py  run_complexity.py  run_csv_import.py  (+29 more)
.github/: copilot-instructions.md
docs/: cluster_rollup_analysis.md  dashboard_platform_plan.md
enrichment/: __init__.py  orchestrator.py
ingest/: __init__.py  extractors.py  post_sync.py  reconcile.py
migrations/: 001_initial.sql  002_metrics_columns.sql  003_analytics.sql  003_analytics_extension.sql  004_add_ticket_number.sql  004_analytics_views.sql  005_llm_pass_results.sql  006_daily_open_counts.sql  007_rebuild_daily_open_counts.sql  008_backlog_views_from_daily_counts.sql  009_fix_aging_view.sql  010_backlog_breakdown_views.sql  011_backlog_views_desc_sort.sql  012_powerman_product_view.sql  013_add_frustrated_reason.sql  013_product_severity_view.sql  014_backlog_daily_by_severity.sql  015_pass2_grammar.sql  016_saved_reports.sql  (+37 more)
web/: app.py  (+9 more)
(+126 files in other folders)
